<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">android service</string>
	
	
	<string name="musicService">Music service</string>
        <string name="musicReceiver">Music Receiver</string>
	<string name="bindMusicService">Bind Music service</string>
	<string name="remoteMusicService">Remote Music service</string>
	
	<string name="play">Play</string>
	<string name="stop">Stop</string>
	<string name="pause">Pause</string>
	<string name="exit">Exit</string>
	
	<string name="close">Close</string>
</resources>
