<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background_white"
    android:orientation="vertical"
    android:padding="16dp" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/virtual_boundary_blue"
        android:orientation="vertical" >

        <Button
            android:id="@+id/play"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/button"
            android:text="@string/play"
            android:textColor="@color/content_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/virtual_boundary_blue"
        android:orientation="vertical" >

        <Button
            android:id="@+id/stop"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/button"
            android:text="@string/stop"
            android:textColor="@color/content_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/virtual_boundary_blue"
        android:orientation="vertical" >

        <Button
            android:id="@+id/pause"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/button"
            android:text="@string/pause"
            android:textColor="@color/content_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/virtual_boundary_blue"
        android:orientation="vertical" >

        <Button
            android:id="@+id/close"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/button"
            android:text="@string/close"
            android:textColor="@color/content_blue" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@color/virtual_boundary_blue"
        android:orientation="vertical" >

        <Button
            android:id="@+id/exit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="1dp"
            android:background="@drawable/button"
            android:text="@string/exit"
            android:textColor="@color/content_blue" />
    </LinearLayout>

</LinearLayout>